--- a/src/app/despesa/despesa.component.html
+++ b/src/app/despesa/despesa.component.html
@@ -1,10 +1,18 @@
+<br>
+<div class="container " *ngIf="!exibirEstimativas">
+    <div class="text-center">
+        <div class="spinner-border" role="status">
+          <span class="visually-hidden"></span>
+        </div>
+      </div>
+</div>
 <div class="container ">
     <div class="row">
         <div class="col">
             <br>
 
             <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
-                Adicionar despesa
+                <img src="../../assets/img/plus-circle-fill.svg"  width="32" height="32"> Adicionar despesa
             </button>
 
             <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
@@ -23,42 +31,45 @@
         </div>
     </div>
     <div class="row">
-        <div class="col">
-            <div *ngIf="exibirEstimativas">
-                <app-grafico [infoGrafico]="graficoEstimativas"></app-grafico>
+         <div class="col">   
+            <div *ngIf="exibirTags" class="grafico">
+                <app-grafico [infoGrafico]="graficoTags"></app-grafico>
             </div>
         </div>
-        <div class="col">
-            <div *ngIf="exibirTags">
-                <app-grafico [infoGrafico]="graficoTags"></app-grafico>
+        <div class="col" >
+            <div *ngIf="exibirEstimativas" >
+                <app-grafico [infoGrafico]="graficoEstimativas"></app-grafico>
             </div>
         </div>
     </div>
     <br>
     <br>
+    <br>
+    <br>
+    <br>
     <div class="row">
         <div class="col">
-
-
             <table class="table table-hover">
-                <thead>
+                <thead class="thead-dark">
                     <tr>
                         <th scope="col">Despesa</th>
                         <th scope="col">Valor</th>
                         <th scope="col">Parcelas</th>
                         <th scope="col">Data</th>
-                        <th scope="col">Tag</th>
+                        <th scope="col">Categoria</th>
                         <th scope="col">Grupo</th>
+                        <th scope="col">Ações</th>
                     </tr>
                 </thead>
                 <tbody>
                     <tr *ngFor="let item of despesas">
                         <td>{{item.nomeDespesa}}</td>
-                        <td>{{item.valorDespesa}}</td>
+                        <td>R$ {{item.valorDespesa}}</td>
                         <td>{{item.parcela}}/{{item.parcelaTotal}}</td>
                         <td>{{item.data}}</td>
                         <td>{{item.tag}}</td>
                         <td>{{item.grupo?.nome}}</td>
+                        <td><button type="button" class="btn btn-danger">X</button></td>
                     </tr>
                 </tbody>
             </table>
@@ -67,3 +78,7 @@
     <br>
     <br>
 </div>
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css">
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.0/dist/jquery.slim.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"></script>
