--- a/src/app/despesa/despesa.component.html
+++ b/src/app/despesa/despesa.component.html
@@ -6,7 +6,7 @@
         </div>
       </div>
 </div>
-<div class="container ">
+<div class="container " *ngIf="exibirEstimativas">
     <div class="row">
         <div class="col">
             <br>
