--- a/src/app/portal-cabecalho/portal-cabecalho.component.html
+++ b/src/app/portal-cabecalho/portal-cabecalho.component.html
@@ -17,7 +17,7 @@
         </li>
       </ul>
       <div class="form-inline my-2 my-lg-0">
-        <button class="btn btn-outline-primary my-2 my-sm-0" type="submit">Sair</button>
+        <button class="btn btn-outline-primary my-2 my-sm-0" (click)="sair()" type="button">Sair</button>
       </div>
     </div>
   </nav>
