--- a/src/app/portal-cabecalho/portal-cabecalho.component.html
+++ b/src/app/portal-cabecalho/portal-cabecalho.component.html
@@ -11,8 +11,8 @@
             Despesas
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <a class="dropdown-item" href="#">Pessoais</a>
-            <a class="dropdown-item" href="#">Grupos</a>
+            <a class="dropdown-item" href="dash">Pessoais</a>
+            <a class="dropdown-item" href="grupo">Grupos</a>
           </div>
         </li>
       </ul>
