--- a/src/app/despesa/despesa.component.html
+++ b/src/app/despesa/despesa.component.html
@@ -1,6 +1,7 @@
 <app-portal-cabecalho></app-portal-cabecalho>
 
 <br>
+
 <div class="container " *ngIf="!exibirEstimativas">
     <div class="text-center">
         <div class="spinner-border" role="status">
@@ -9,29 +10,20 @@
       </div>
 </div>
 <div class="container " *ngIf="exibirEstimativas">
+    <h4 class="card-title">Dashboard despesas consolidadas</h4>
+</div>
+<br>
+<div class="container " *ngIf="exibirEstimativas">
     <div class="row">
-        <div class="col">
-            <br>
-
-            <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
-                <img src="../../assets/img/plus-circle-fill.svg"  width="32" height="32"> Adicionar despesa
-            </button>
-
-            <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
-                aria-hidden="true">
-                <div class="modal-dialog" role="document">
-                    <div class="modal-content">
-                        <div class="modal-body">
-                            <app-cadastrar-despesa></app-cadastrar-despesa>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-            <br>
-            <br>
+        <div class="col-4">
+            <h5 class="card-title">Comprometimento de renda:</h5>
+        </div>
+        <div class="progress col-8">
+            <div class="progress-bar" role="progressbar" aria-label="Example with label" style="width: 25%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">25%</div>
         </div>
     </div>
+    <br>
+    <br>
     <div class="row">
          <div class="col">   
             <div *ngIf="exibirTags" class="grafico">
@@ -48,6 +40,25 @@
     <br>
     <br>
     <br>
+    <br>
+    <div class="row">
+        <div class="col-2">
+            <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
+                <img src="../../assets/img/plus-circle-fill.svg"  width="20" height="20"> Nova despesa
+            </button>
+
+            <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+                aria-hidden="true">
+                <div class="modal-dialog" role="document">
+                    <div class="modal-content">
+                        <div class="modal-body">
+                            <app-cadastrar-despesa></app-cadastrar-despesa>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
     <br>
     <div class="row">
         <div class="col">
