--- a/src/app/despesa/despesa.component.html
+++ b/src/app/despesa/despesa.component.html
@@ -1,15 +1,7 @@
 <app-portal-cabecalho></app-portal-cabecalho>
 
 <br>
-
-<div class="container " *ngIf="!exibirEstimativas">
-    <div class="text-center">
-        <div class="spinner-border" role="status">
-          <span class="visually-hidden"></span>
-        </div>
-      </div>
-</div>
-<div class="container " *ngIf="exibirEstimativas">
+<div class="container " >
     <h4 class="card-title">Dashboard despesas consolidadas</h4>
 </div>
 <br>
@@ -41,12 +33,18 @@
     <br>
     <br>
     <br>
+</div>
+<div class="container">
+    <div class="row" *ngIf="exibirCarregamento">
+        <div class="col-4">
+            <h5 class="card-title">Você não possui despesas cadastradas</h5>
+        </div>
+    </div>
     <div class="row">
         <div class="col-2">
             <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
                 <img src="../../assets/img/plus-circle-fill.svg"  width="20" height="20"> Nova despesa
             </button>
-
             <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
                 aria-hidden="true">
                 <div class="modal-dialog" role="document">
@@ -59,6 +57,15 @@
             </div>
         </div>
     </div>
+</div>
+<div class="container " *ngIf="exibirCarregamento">
+    <div class="text-center">
+        <div class="spinner-border" role="status">
+          <span class="visually-hidden"></span>
+        </div>
+      </div>
+</div>
+<div class="container"  *ngIf="exibirEstimativas">
     <br>
     <div class="row">
         <div class="col">
@@ -82,15 +89,15 @@
                         <td>{{item.data}}</td>
                         <td>{{item.tag}}</td>
                         <td>{{item.grupo?.nome}}</td>
-                        <td><button type="button" class="btn btn-danger">X</button></td>
+                        <td><button type="button" class="btn btn-danger" (click)="deletarDespesa(item)">X</button></td>
                     </tr>
                 </tbody>
             </table>
         </div>
     </div>
-    <br>
-    <br>
 </div>
+    <br>
+    <br>
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css">
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.0/dist/jquery.slim.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
