--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -4,9 +4,10 @@
       <span class="navbar-toggler-icon"></span>
     </button>
   </nav>
-<br><br><br><br>
+<br>
 <div class="d-flex justify-content-center align-items-center">
     <div class="card p-5">
+        <img src="../../assets/images/logo_poupa_facil_png.png" alt="poupafacil">
         <form [formGroup]="loginForm" (ngSubmit)="efetuarLogin()">
             <div class="form-group">
                 <label for="email">E-mail</label>
