--- a/src/app/cadastrar-grupo/cadastrar-grupo.component.html
+++ b/src/app/cadastrar-grupo/cadastrar-grupo.component.html
@@ -6,18 +6,22 @@
     </div>
     <br>
     <div class="row">
-        <div class="col-8">
+        <div class="col">
             <div class="form-group">
-                <input type="text" class="form-control" formControlName="inputNomeDespesa" placeholder="Nome Despesa">
+                <input type="text" class="form-control" formControlName="inputNomeGrupo" placeholder="Nome do grupo">
             </div>
         </div>
-        <div class="col-4">
-            <div class="form-group">
-                <input type="text" class="form-control" formControlName="inputValor" placeholder="valor">
+    </div>
+    <div class="row">
+        <div class="col">
+            <div class="input-group mb-3">
+                <select  class="form-control" formControlName="inputIdGrupo" id="inputIdGrupo" >
+                    <option value="" disabled selected>Selecione um usuario</option>
+                    <option [selected]="true == true" value="0">Sem grupo</option>
+                    
+                </select>
             </div>
-        </div>
-       
-       
+        </div>   
     </div>
     <br>
     <div class="modal-footer">
