--- a/src/app/portal-cabecalho/portal-cabecalho.component.html
+++ b/src/app/portal-cabecalho/portal-cabecalho.component.html
@@ -8,6 +8,14 @@
       <ul class="navbar-nav mr-auto">
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            Minha conta
+          </a>
+          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+            <a class="dropdown-item" href="perfil">Dados pessoais</a>
+          </div>
+        </li>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="dash" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             Despesas
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
