--- a/src/app/despesa/despesa.component.html
+++ b/src/app/despesa/despesa.component.html
@@ -6,14 +6,14 @@
 </div>
 <br>
 <div class="container " *ngIf="exibirEstimativas">
-    <div class="row">
+    <!--<div class="row">
         <div class="col-4">
             <h5 class="card-title">Comprometimento de renda:</h5>
         </div>
         <div class="progress col-8">
             <div class="progress-bar" role="progressbar" aria-label="Example with label" style="width: 25%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">25%</div>
         </div>
-    </div>
+    </div>-->
     <br>
     <br>
     <div class="row">
