correção tempo de carregamento

--- a/src/app/despesa/despesa.component.html
+++ b/src/app/despesa/despesa.component.html
@@ -89,7 +89,7 @@
                         <td>{{item.data}}</td>
                         <td>{{item.tag}}</td>
                         <td>{{item.grupo?.nome}}</td>
-                        <td><button type="button" class="btn btn-danger" (click)="deletarDespesa(item)">X</button></td>
+                        <td><button type="button" disabled class="btn btn-danger" (click)="deletarDespesa(item)">X</button></td>
                     </tr>
                 </tbody>
             </table>
