--- a/src/app/despesa-grupo/despesa-grupo.component.html
+++ b/src/app/despesa-grupo/despesa-grupo.component.html
@@ -24,7 +24,7 @@
             </div>
         </div> 
         <div class="col">
-            <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
+            <button type="button" class="btn btn-primary" disabled data-toggle="modal" data-target="#exampleModal">
                 <img src="../../assets/img/plus-circle-fill.svg"  width="20" height="20"> Novo grupo
             </button>
         </div>  
