inclusao de grupos

--- a/src/app/cadastrar-grupo/cadastrar-grupo.component.html
+++ b/src/app/cadastrar-grupo/cadastrar-grupo.component.html
@@ -14,6 +14,15 @@
     </div>
     <div class="row">
         <div class="col">
+            <div class="form-group">
+                <input type="text" class="form-control" formControlName="inputParticipante" placeholder="participante">
+            </div>
+        </div>
+    </div>
+
+
+    <div class="row">
+        <div class="col">
             <div class="input-group mb-3">
                 <select  class="form-control" formControlName="inputIdGrupo" id="inputIdGrupo" >
                     <option value="" disabled selected>Selecione um usuario</option>
