--- a/src/app/despesa/despesa.component.html
+++ b/src/app/despesa/despesa.component.html
@@ -35,7 +35,7 @@
     <br>
 </div>
 <div class="container">
-    <div class="row" *ngIf="exibirCarregamento">
+    <div class="row" *ngIf="!isPossuiDespesa">
         <div class="col-4">
             <h5 class="card-title">Você não possui despesas cadastradas</h5>
         </div>
