--- a/src/app/cadastrar-grupo/cadastrar-grupo.component.html
+++ b/src/app/cadastrar-grupo/cadastrar-grupo.component.html
@@ -2,7 +2,7 @@
 
     <div class="modal-header">
         <h5 class="modal-title">Adicionar novo grupo</h5>
-        <button type="button" class="btn-close" data-dismiss="modal" (click)="teste()" aria-label="Close"> X </button>
+        <button type="button" class="btn-close" data-dismiss="modal" (click)="fechar()" aria-label="Close"> X </button>
     </div>
     <br>
     <div class="row">
