--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -25,10 +25,6 @@
             <label for="senha">Senha</label>
                 <input type="password" formControlName="inputSenha" id="senha" class="form-control">
             </div>
-
-            <div class="form-group">
-                <a href="#">Esqueceu sua senha?</a>
-            </div>
             <div class="form-group">
                 <a href="#" (click)="habilitarCadastro()">Novo por aqui?</a>
             </div>
@@ -60,7 +56,7 @@
             </div>
             <div class="form-group">
                 <label for="renda">Renda</label>
-                <input type="password" formControlName="inputRendaCadastro" id="renda" class="form-control">
+                <input type="text" formControlName="inputRendaCadastro" id="renda" class="form-control">
             </div>
             <div>
                 <button class="btn btn-dark botao-login" type="submit">Cadastrar</button>
